data/derived/sp14/progs/unify/prog1398.ml.out
Characters 73-88:
  | Sine a -> sin(eval(a,x,y)*2)
                 ^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
